--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
     </p>
 
     <div class="nav">
-      <a class="button" href="page1.html">Back</a>
+      <a class="button" href="index.html">Back</a>
       <a class="button" href="page3.html">Next</a>
     </div>
   </div>
