--- a/page9.html
+++ b/page9.html
@@ -19,15 +19,9 @@ Here are the references:
 <p class="attribution">"<a rel="noopener noreferrer" href="https://www.flick    r.com/photos/132717081@N06/32874401173">Paris Metro</a>" by <a rel="noopener     noreferrer" href="https://www.flickr.com/photos/132717081@N06">konstantin.t    ilberg</a> is licensed under <a rel="noopener noreferrer" href="https://crea    tivecommons.org/licenses/by/2.0/?ref=openverse">CC BY 2.0 <img src="https://    mirrors.creativecommons.org/presskit/icons/cc.svg" style="height: 1em; margi    n-right: 0.125em; display: inline;" /><img src="https://mirrors.creativecomm    ons.org/presskit/icons/by.svg" style="height: 1em; margin-right: 0.125em; di    splay: inline;" /></a>.</p>
 <p class="attribution">"<a rel="noopener noreferrer" href="https://commons.w    ikimedia.org/w/index.php?curid=31452863">The White Rabbit (Tenniel) - The Nu    rsery Alice (1890) - BL</a>" by <a rel="noopener noreferrer" href="https://e    n.wikipedia.org/wiki/en:John_Tenniel">John Tenniel</a> is marked with <a rel    ="noopener noreferrer" href="https://creativecommons.org/publicdomain/zero/1    .0/deed.en?ref=openverse">CC0 1.0 <img src="https://mirrors.creativecommons.    org/presskit/icons/cc.svg" style="height: 1em; margin-right: 0.125em; displa    y: inline;" /><img src="https://mirrors.creativecommons.org/presskit/icons/z    ero.svg" style="height: 1em; margin-right: 0.125em; display: inline;" /></a>    .</p>
 
-
-
-
-
-
-
     <div class="nav">
       <a class="button" href="page8.html">Back</a>
-      <a class="button" href="page1.html">Start</a>
+      <a class="button" href="index.html">Start</a>
     </div>
   </div>
 </body>
